thesauri implementation, first commit
 - thesauri

--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -37,10 +37,19 @@
                                     <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ layer_form.keywords }}
-                                </div>
+                                </div>      
                             </div>
                         </div>
                     </div>
+					<div class = "row">
+						<div class="col-lg-3">
+							</div>
+							<div class="col-lg-5">
+								<div>
+								{{ tkeywords_form }}
+								</div>
+							</div>
+						</div>
                     <hr/>
                     <div class="row">
                         <div class="col">
