--- a/geonode/layers/templates/layers/layer_metadata_upload.html
+++ b/geonode/layers/templates/layers/layer_metadata_upload.html
@@ -69,8 +69,11 @@
       <ul id="global-errors"></ul>
       <h4>{% trans "Files to be uploaded" %}</h4>
       <div id="file-queue"></div>
-      <div class="checkbox" style="display:none;" id="metadata_uploaded_preserve_check">
+      <!-- div class="checkbox" style="display:none;" id="metadata_uploaded_preserve_check">
           Preserve Metadata XML <input type="checkbox" name="metadata_uploaded_preserve" id="id_metadata_uploaded_preserve"/>
+      </div -->
+      <div class="checkbox" style="display:none;" id="metadata_upload_form_check">
+          Is Upload Metadata XML Form <input type="checkbox" name="metadata_upload_form" id="id_metadata_upload_form" checked="true"/>
       </div>
     </section>
 
