--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -1,8 +1,19 @@
 {% load floppyforms %}
 {% load i18n %}
+<style>
+#mdeditor_form > .tab-content > .tab-pane {
+  overflow: auto;
+  height: auto;
+  overflow-x: hidden;
+}
+
+#regions_multiselect_container .fstElement {
+  min-width: 300px;
+}
+</style>
 
 <ul id="md_tabs" class="nav nav-tabs">
-    <li id="first" class="active">    
+    <li id="first" class="active">
         <a data-toggle="tab" href="#mandatory">Let's start > </a>
     </li>
     <li id="second">
@@ -16,10 +27,11 @@
     </li>
 </ul>
 
+
 {% block body_outer %}
 <div class="tab-content">
 
-    <div id="mandatory" class="tab-pane fade in active">
+    <div id="mandatory" class="tab-pane fade in active" style="">
         <!--<br />-->
         <div class="panel-group">
             <div class="panel panel-default">
@@ -28,27 +40,10 @@
                     <div class="row">
                         <div class="col">
                             <div id="basicInfo" class="container-fluid">
-                                <div class="col-lg-6">
-                                    <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
-                                    <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
-                                    {{ layer_form.title }}
-                                </div>
-                                <div class="col-lg-6">
-                                    <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
-                                    <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
-                                    {{ layer_form.keywords }}
-                                </div>      
                             </div>
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col-lg-3">
-                        </div>
-                        <div class="col-lg-5">
-                            <div>
-                                {{ tkeywords_form }}
-                            </div>
-                        </div>
                     </div>
                     <hr/>
                     <div class="row">
@@ -62,56 +57,58 @@
                                     </div>
                                     <div><a class="btn btn-default btn-block btn-xs" href="#" id="set_thumbnail">{% trans "Set" %}</a></div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
+                                    <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
+                                    <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
+                                    {{ layer_form.title }}
                                     <div>
                                         <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>-->
                                         {{ layer_form.abstract }}
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="row">
-                                        <div class="col-lg-2">
-                                            <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
-                                            <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
-                                            {{ layer_form.date }}
-                                        </div>
+                                <div class="col-lg-5">
+                                  <div class="col-lg-12">
+                                    <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
+                                    <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
+                                    {{ layer_form.keywords }}
+                                  </div>
+                                    <div>
+                                          {{ tkeywords_form }}
                                     </div>
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
-                                            <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
-                                            {{ layer_form.date_type }}
-                                        </div>
-                                    </div>                                    
+                                    <div class="col-lg-5 col-xs-12">
+                                        <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
+                                        <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
+                                        {{ layer_form.date_type }}
+                                    </div>
+                                    <div class="col-lg-6 col-xs-12">
+                                        <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
+                                        <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
+                                        {{ layer_form.date }}
+                                    </div>
+                                    <div id="basicCategoryInfo" class="col-lg-12">
+                                        <span><label for="{{ category_form.category_choice_field|id }}" class="control-label required-field">{% trans "Category" %}</label></span>
+                                        <fieldset id="category_form" class="text-center" style="font-size:0.8em; max-height: 200px; overflow-y: auto;">
+                                          {% autoescape off %}
+                                          {% for choice in category_form.category_choice_field.field.choices %}
+                                              {% if forloop.counter0|divisibleby:8 %}{% endif %}
+                                                  {% if forloop.counter0|divisibleby:4 %}{% endif %}
+                                                    {% if forloop.counter0|divisibleby:4 %}{% endif %}
+                                                      <div class="col-xs-6 col-sm-6">
+                                                        <label class="fancy-checkbox">
+                                                            <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
+                                                              {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
+                                                            {{ choice.1 }}
+                                                        </label>
+                                                      </div>
+                                                    {% if forloop.counter|divisibleby:4 %}{% endif %}
+                                                  {% if forloop.counter|divisibleby:4 %}{% endif %}
+                                              {% if forloop.counter|divisibleby:8 %}{% endif %}
+                                          {% endfor %}
+                                          {% endautoescape %}
+                                        </fieldset>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr/>
-                    <div class="row">
-                        <div class="col">
-                            <div id="basicCategoryInfo" class="container-fluid">
-                                <span><label for="{{ category_form.category_choice_field|id }}" class="control-label required-field">{% trans "Category" %}</label></span>
-								<fieldset id="category_form" class="text-center" style="font-size:0.8em">
-								  {% autoescape off %}
-								  {% for choice in category_form.category_choice_field.field.choices %}
-                                      {% if forloop.counter0|divisibleby:8 %}<div class="row">{% endif %}
-                                          {% if forloop.counter0|divisibleby:4 %}<div class="col-xs-6 col-sm-6">{% endif %}
-                                            {% if forloop.counter0|divisibleby:4 %}<div class="row">{% endif %}
-                                              <div class="col-xs-3 col-sm-3">
-                                                <label class="fancy-checkbox">
-                                                    <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
-                                                      {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
-                                                    {{ choice.1 }}
-                                                </label>
-                                              </div>
-                                            {% if forloop.counter|divisibleby:4 %}</div>{% endif %}
-                                          {% if forloop.counter|divisibleby:4 %}</div>{% endif %}
-                                      {% if forloop.counter|divisibleby:8 %}</div>{% endif %}
-								  {% endfor %}
-								  {% endautoescape %}
-								</fieldset>
                             </div>
                         </div>
                     </div>
@@ -122,12 +119,12 @@
 
     <div id="advanced" class="tab-pane fade">
         <div class="panel-group">
-		        <div class="panel panel-default">
-		            <!-- div class="panel-heading">Metadata info</div -->
-		            <div class="panel-body">
-		                <div class="row" id="mdinfo" style="height: 590px">
+                <div class="panel panel-default">
+                    <!-- div class="panel-heading">Metadata info</div -->
+                    <div class="panel-body">
+                        <div class="row" id="mdinfo" style="max-height: 590px">
                             <div class="row">
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div>
                                         <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Language used within the dataset)</p>-->
@@ -139,15 +136,24 @@
                                         <!--<p class="xxs-font-size">(Limitation/s placed upon the access or use of data)</p>-->
                                         {{ layer_form.restriction_code_type }}
                                     </div>
-                                </div>
-                                <div class="col-lg-3">
                                     <div>
                                         <span><label for="{{ layer_form.constraints_other|id }}">{{ layer_form.constraints_other.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Other restrictions and legal prerequisites for accessing or use data and metadata)</p>-->
                                         {{ layer_form.constraints_other }}
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
+                                      <div id="regions_multiselect_container">
+                                          <span><label for="{{ layer_form.regions|id }}">{{ layer_form.regions.label }}</label></span>
+                                          {{ layer_form.regions }}
+                                      </div>
+                                      <div>
+                                          <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
+                                          <!--<p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>-->
+                                          {{ layer_form.data_quality_statement }}
+                                      </div>
+                                </div>
+                                <div class="col-lg-4">
                                     <div>
                                         <span><label for="{{ layer_form.license|id }}">{{ layer_form.license.label }}</label></span>
                                         <!--<p class="xxs-font-size">(License of the dataset)</p>-->
@@ -163,33 +169,21 @@
                                         {{ layer_form.featured }}
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
-                                    <div>
-                                        <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
-                                        <!--<p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>-->
-                                        {{ layer_form.data_quality_statement }}
-                                    </div>
-                                </div>
                             </div>
-                            <div class="row" style="position:absolute">
-                                <div class="col-lg-10">
-                                    <div id="regions_multiselect_container">
-                                        <span><label for="{{ layer_form.regions|id }}">{{ layer_form.regions.label }}</label></span>
-                                        {{ layer_form.regions }}
-                                    </div>
-                                </div>
+                            <div class="row">
+
                             </div>
-		                </div>
+                        </div>
                     </div>
                 </div>
         </div>
     </div>
-    
+
     <div id="ownership" class="tab-pane fade">
         <br />
         <p>Other, Optional, Metadata</p>
         <div class="row">
-            <div class="col-xs-6 col-lg-4">
+            <div class="col-xs-6 col-lg-5">
                 <div>
                     <span><label for="{{ layer_form.edition|id }}">{{ layer_form.edition.label }}</label></span>
                     <!--<p class="xxs-font-size">(Version of the cited resource)</p>-->
@@ -207,16 +201,21 @@
                 </div>
             </div>
             <div class="col-xs-6 col-lg-6">
-                <div class="row">
-                    <div class="col-xs-3 col-lg-3" style="white-space: nowrap;">
+
+                    <div class="col-xs-12 col-lg-6">
+                      <div class="input-group date">
                         <span><label for="{{ layer_form.temporal_extent_start|id }}">{{ layer_form.temporal_extent_start.label }}</label></span>
                         <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                         {{ layer_form.temporal_extent_start }}
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-6">
+                        <div class="input-group date">
                         <span><label for="{{ layer_form.temporal_extent_end|id }}">{{ layer_form.temporal_extent_end.label }}</label></span>
                         <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                         {{ layer_form.temporal_extent_end }}
+                        </div>
                     </div>
-                </div>
                 <div class="row">
                     <div>
                         <span><label for="{{ layer_form.maintenance_frequency|id }}">{{ layer_form.maintenance_frequency.label }}</label></span>
@@ -228,7 +227,6 @@
                         <!--<p class="xxs-font-size">(Method used to represent geographic information in the dataset)</p>-->
                         {{ layer_form.spatial_representation_type }}
                     </div>
-                    <hr/>
                     <div>
                         <div class="panel panel-default">
                             <div class="panel-heading">Responsible Parties</div>
