--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -1,8 +1,24 @@
 {% load floppyforms %}
 {% load i18n %}
+<link href="{{ STATIC_URL }}lib/css/bootstrap-select.min.css?v={{ VERSION }}" rel="stylesheet" />
 <style>
 #regions_multiselect_container .fstElement {
   min-width: 300px;
+}
+#mdeditor_form .panel-group .panel{
+  overflow: visible;
+}
+
+#mdeditor_form textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+#mdeditor_form .tokenfield.form-control {
+  height: auto;
+}
+#regions_multiselect_container .fstChoiceItem {
+  background-color: #2c689c;
+  border: #2c689c;
 }
 </style>
 <style>
@@ -57,11 +73,11 @@
   display: none;
 }
 .wizard--progress > li.is-complete {
-  color: #2ECC71;
+  color: #333333;
 }
 .wizard--progress > li.is-complete:before, .wizard--progress > li.is-complete:after {
   color: #FFF;
-  background: #2ECC71;
+  background: #333333;
 }
 .wizard--progress > li.is-complete:before {
   z-index: 1;
@@ -74,7 +90,7 @@
 }
 .wizard--progress > li.is-active:before {
   color: #FFF;
-  background: #3498DB;
+  background: #ff8f31;
 }
 
 /**
@@ -120,13 +136,16 @@
 <div id="edit-metadata" class="tab-content tab-pane fade in active">
   <ul class="wizard--progress wizard--progress--medium">
       <li data-step="1" id="first" class="is-active" data-toggle="tab" href="#mandatory">
-          <a>Let's start</a>
+          <a>Data Info</a>
       </li>
       <li data-step="2" id="second"  data-toggle="tab" href="#advanced">
-          <a>Almost there... </a>
+          <a>Metadata Info</a>
       </li>
-      <li data-step="3" id="last" data-toggle="tab" href="#ownership">
-          <a>Done!</a>
+      <li data-step="3" data-toggle="tab" href="#ownership">
+          <a>Ownership</a>
+      </li>
+      <li data-step="4"  data-toggle="tab" href="#dataset">
+          <a>Dataset Attributes</a>
       </li>
   </ul>
     <div id="mandatory" class="tab-pane fade in active">
@@ -183,25 +202,22 @@
                                     </div>
                                     <div id="basicCategoryInfo" class="col-lg-12">
                                         <span><label for="{{ category_form.category_choice_field|id }}" class="control-label required-field">{% trans "Category" %}</label></span>
-                                        <fieldset id="category_form" class="text-center" style="font-size:0.8em; max-height: 200px; overflow-y: auto;">
-                                          {% autoescape off %}
+                                        <select
+                                            data-live-search="true"
+                                            data-size="5"
+                                            name="category_choice_field"
+                                            value={{category_form.initial}}
+                                            id="category_form"
+                                            class="selectpicker form-control"
+                                            >
                                           {% for choice in category_form.category_choice_field.field.choices %}
-                                              {% if forloop.counter0|divisibleby:8 %}{% endif %}
-                                                  {% if forloop.counter0|divisibleby:4 %}{% endif %}
-                                                    {% if forloop.counter0|divisibleby:4 %}{% endif %}
-                                                      <div class="col-xs-6 col-sm-6">
-                                                        <label class="fancy-checkbox">
-                                                            <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
-                                                              {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
-                                                            {{ choice.1 }}
-                                                        </label>
-                                                      </div>
-                                                    {% if forloop.counter|divisibleby:4 %}{% endif %}
-                                                  {% if forloop.counter|divisibleby:4 %}{% endif %}
-                                              {% if forloop.counter|divisibleby:8 %}{% endif %}
+                                              <option type="radio"
+                                              {% ifequal category_form.initial choice.0 %} selected="selected" {% endifequal %}
+                                              value="{{ choice.0 }}"
+                                              data-content="<span class='has-popover' data-container='body' data-toggle='popover' data-placement='top'  data-content=' {{ choice.2.description }}' rigger='hover'><i class='fa {{choice.2.fa_class}}'></i> {{ choice.2.gn_description }}<span>"
+                                              >{{ choice.2.gn_description }}</option>
                                           {% endfor %}
-                                          {% endautoescape %}
-                                        </fieldset>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -373,36 +389,38 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Dataset Attributes</div>
-                    <div class="panel-body">
-                        <div>
-                            {{ attribute_form.management_form }}
-                            <table class="table table-striped table-bordered table-condensed">
-                                <tr>
-                                    <th>{% trans "Attribute" %}</th>
-                                    <th>{% trans "Label" %}</th>
-                                    <th>{% trans "Description" %}</th>
-                                    <th>{% trans "Display Order" %}</th>
-                                </tr>
-                                {% for form in attribute_form.forms %}
-                                    {% if form.attribute %}
-                                        <tr>
-                                            <td><div style="display:none">{{form.id}}</div>{{form.attribute}}</td>
-                                            <td>{{form.attribute_label}}</td>
-                                            <td>{{form.description}}</td>
-                                            <td>{{form.display_order}}</td>
-                                        </tr>
-                                    {% endif %}
-                                {% endfor %}
-                            </table>
-                          </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
+    <div id="dataset" class="tab-pane fade">
+      <div class="row">
+          <div class="col">
+              <div class="panel panel-default">
+                  <div class="panel-heading">Dataset Attributes</div>
+                  <div class="panel-body">
+                      <div>
+                          {{ attribute_form.management_form }}
+                          <table class="table table-striped table-bordered table-condensed">
+                              <tr>
+                                  <th>{% trans "Attribute" %}</th>
+                                  <th>{% trans "Label" %}</th>
+                                  <th>{% trans "Description" %}</th>
+                                  <th>{% trans "Display Order" %}</th>
+                              </tr>
+                              {% for form in attribute_form.forms %}
+                                  {% if form.attribute %}
+                                      <tr>
+                                          <td><div style="display:none">{{form.id}}</div>{{form.attribute}}</td>
+                                          <td>{{form.attribute_label}}</td>
+                                          <td>{{form.description}}</td>
+                                          <td>{{form.display_order}}</td>
+                                      </tr>
+                                  {% endif %}
+                              {% endfor %}
+                          </table>
+                        </div>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
 </div>
 <div id="preview" class="tab-pane fade" style="overflow: hidden;">
